syntax = "proto3";

package review;

option go_package = "review-service/review";

message ProductDetails {
    string asin = 1;
    string description = 2;
    string title = 3;
    string url = 4;
    string main_image = 5;
}

message GetProductDetailsRequest {
    string asin = 1;
    string country = 2;
}

message GetProductDetailsResponse {
    ProductDetails product = 1;
}

message Products {
    string url = 1;
    string title = 2;
    string thumb_nail = 3;
    bool sponsored = 4;
    float score = 5;
    float current_price = 6;
    string currency = 7;
    bool bestseller = 8;
    string asin = 9;
}

message GetProductsRequest {
    string keyword = 1;
    string country = 2;
    string category = 3;
}

message GetProductsResponse {
    repeated Products product = 1;
}

service Product {
    rpc GetProductDetails(GetProductDetailsRequest) returns (GetProductDetailsResponse){}
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse){}
}