syntax = "proto3";

package review;

import "google/protobuf/timestamp.proto";
import "product_service.proto";

option go_package = "review-service/review";


message Reviews{
    string id = 1;
    string review = 2;
    float score = 3;
    string label = 4;
    string review_id = 5;
    optional google.protobuf.Timestamp updated_at = 6;
    google.protobuf.Timestamp created_at = 7;
}

message AddReviewRequest {
    string review = 1;
    string product_id = 2;
}

message AddReviewResponse {
    string message = 1;
}

message GetReviewsRequest {
    string product_id = 1;
}

message GetReviewsResponse {
    repeated Reviews reviews = 1;
}

message LeaderBoard{
    string product_id = 1;
    float score = 2;
    ProductDetails product_details = 3;
}
message GetTop10ProductsRequest{}
message GetTop10ProductsResponse{
    repeated LeaderBoard leaderboard = 1;
}

message UpdateReviewRequest {}

message UpdateReviewResponse {}

message DeleteReviewRequest {}

message DeleteReviewResponse {}

service Review {
    rpc AddReview (AddReviewRequest) returns (AddReviewResponse){}
    rpc GetReviews(GetReviewsRequest) returns (GetReviewsResponse){}
    rpc GetTop10Products(GetTop10ProductsRequest) returns (GetTop10ProductsResponse){}
    rpc UpdateReviews(UpdateReviewRequest) returns (UpdateReviewResponse){}
}